--- a/ansible-playbook/gitlab/values.yaml
+++ b/ansible-playbook/gitlab/values.yaml
@@ -1,7 +1,7 @@
 imagePullPolicy: IfNotPresent
 evisionHistoryLimit: 3
-gitlabUrl: http://89.169.139.176
-runnerRegistrationToken: "glrt-ziDjVEyzCMJ6j1VZMD3y"
+gitlabUrl: http://51.250.13.135
+runnerRegistrationToken: "glrt-SRtDLo__ZzZ1KbY33-ZF"
 erminationGracePeriodSeconds: 3600
 concurrent: 2
 checkInterval: 30
@@ -9,6 +9,14 @@ logLevel: info
 ogFormat: json
 sessionServer:
   enabled: false
+# rbac:
+#   create: true
+#   rules:
+#     - resources: ["pods", "secrets", "configmaps"]
+#       verbs: ["get", "list", "watch", "create", "patch", "delete", "update"]
+#     - apiGroups: [""]
+#       resources: ["pods/exec", "pods/attach"]
+#       verbs: ["create", "patch", "delete"]
 rbac:
   create: true
   rules:
@@ -18,7 +26,7 @@ rbac:
     - apiGroups: [""]
       resources: ["pods/log"]
       verbs: ["get"]
-  clusterWideAccess: true
+  clusterWideAccess: true 
   podSecurityPolicy:
     enabled: false
     resourceNames:
@@ -34,14 +42,12 @@ service:
 runners:
   privileged: true
   config: |
-    # log_level = "debug"
     [[runners]]
       output_limit = 10000
       [runners.kubernetes]
         namespace = "kube-system"
         image = "ubuntu:22.04"
         service_account = "admin-user"  
-        # helper_image = "if use custom helper"
   executor: kubernetes
   secret: runner-secret
 securityContext:
