--- a/ansible-playbook/init_cluster.yaml
+++ b/ansible-playbook/init_cluster.yaml
@@ -4,23 +4,19 @@
     path: /home/aspire/.kube/config
   register: kube_config  
 
-- name: debug 
-  ansible.builtin.debug:
-    msg: "{{ kube_config }}"
-
 - block:
     - name: initialize the cluster
       become: yes
       become_user: aspire
       args:
         chdir: $HOME
-      shell: " sudo kubeadm init --v=5 --apiserver-advertise-address={{ ansible_facts.default_ipv4.address }} --pod-network-cidr 10.244.0.0/16 --apiserver-cert-extra-sans={{ ansible_host }}"
+      shell: "sudo kubeadm init --v=5 --apiserver-advertise-address={{ ansible_facts.default_ipv4.address }} --pod-network-cidr 10.244.0.0/16 --apiserver-cert-extra-sans={{ ansible_host }}"
 
     - name: Create .kube directory on {{ inventory_hostname }}
       become: yes
       become_user: aspire
       file:
-        path: $HOME/.kube
+        path: /home/aspire/.kube/
         state: directory
         mode: "0755"
 
@@ -33,9 +29,9 @@
         group: aspire
         mode: 0644
 
-    - name: Sleep 2 minutes before install CNI
+    - name: Sleep 1 minutes before install CNI
       ansible.builtin.wait_for:
-        timeout: 120
+        timeout: 60
 
     - name: Install CNI Calico
       become: yes
@@ -43,9 +39,9 @@
       ansible.builtin.shell: kubectl apply -f https://docs.projectcalico.org/manifests/calico.yaml --validate=false
       register: calico_output
   
-    - name: Sleep 2 minutes after install CNI
+    - name: Sleep 1 minutes after install CNI
       ansible.builtin.wait_for:
-        timeout: 120
+        timeout: 60
   when: not kube_config.stat.exists
 
 - name: Get join command for  workers  on {{ inventory_hostname }}
